--- a/static/css/sass/cdr_homepage.scss
+++ b/static/css/sass/cdr_homepage.scss
@@ -110,7 +110,6 @@ a {
 
 .menu-row-small {
   background-color: $unc-navy;
-  border-bottom: 1px solid #e7e7e7;
 }
 
 .search {
