--- a/static/css/sass/cdr_ui_styles.scss
+++ b/static/css/sass/cdr_ui_styles.scss
@@ -374,10 +374,8 @@ p.no-search-results {
     padding-left: 0;
   }
 
-  #is-admin-unit, #is-collection {
-    h2 {
-      margin-left: 25px;
-    }
+  h2 {
+    margin-left: 25px;
   }
 
   h2.link-list {
@@ -395,6 +393,12 @@ p.no-search-results {
   .relateditem {
     p {
       font-size: 16px;
+    }
+  }
+
+  .aggregate-info {
+    .is-narrow-tablet {
+      margin-left: 25px;
     }
   }
 }
